Added and modified comments and README.

--- a/orcid/src/main/webapp/WEB-INF/web.xml
+++ b/orcid/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,7 @@
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
+	<listener>
+		<listener-class>au.edu.anu.orcid.db.PersistenceAppListener</listener-class>
+	</listener>
 </web-app>
